--- a/Index.html
+++ b/Index.html
@@ -43,11 +43,87 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Zen+Kaku+Gothic+Antique:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/indexstyle.css" />
-    <title>Document</title>
+    <title>Zahra's Yummy Food</title>
   </head>
   <body>
+    <!---Header------>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1 class="Food-logo">Zahra's Yummy Food Blog</h1>
+        </div>
+        <div class="col-12">
+          <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="#">Zahra's Blog</a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div
+              class="collapse navbar-collapse justify-content-center"
+              id="navbarNav"
+            >
+              <ul class="navbar-nav">
+                <li class="nav-item active" id="z-li">
+                  <a class="nav-link" href="#"
+                    >Home <span class="sr-only">(current)</span></a
+                  >
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDropdownMenuLink"
+                    id="z-li"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  >
+                    Pages
+                  </a>
+                  <div
+                    class="dropdown-menu"
+                    aria-labelledby="navbarDropdownMenuLink"
+                  >
+                    <a class="dropdown-item" href="#">Home</a>
+                    <a class="dropdown-item" href="#">Archive</a>
+                    <a class="dropdown-item" href="#">Blog</a>
+                    <a class="dropdown-item" href="#">Contact</a>
+                  </div>
+                </li>
+                <li class="nav-item" id="z-li">
+                  <a class="nav-link" href="#">Features</a>
+                </li>
+                <li class="nav-item" id="z-li">
+                  <a class="nav-link" href="#">Categories</a>
+                </li>
+                <li class="nav-item" id="z-li">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item" id="z-li">
+                  <a class="nav-link" href="#">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </div>
+
     <!---Header------>
     <!--------carousel-->
     <div
@@ -265,6 +341,38 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
+    <!----Section 1-->
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 g-4 p-2">
+            <img src="images/7-image.jpeg" class="s1-img" />
+            <div class="catagory-title">
+              <a href="#">
+                <h5 id="text-s1">Food</h5>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4 g-4 p-2">
+            <img src="images/8-image.jpeg" class="s1-img" />
+            <div class="catagory-title">
+              <a href="#">
+                <h5 id="text-s1">Drinks</h5>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4 g-4 p-2">
+            <img src="images/9-image.jpeg" class="s1-img" />
+            <div class="catagory-title">
+              <a href="#">
+                <h5 id="text-s1">Lifestyle</h5>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!----Section 1-->
   </body>
   <script src="src/main1.js"></script>
 </html>
