--- a/Index.html
+++ b/Index.html
@@ -49,6 +49,10 @@
       href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Zen+Kaku+Gothic+Antique:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="src/indexstyle.css" />
     <title>Zahra's Yummy Food</title>
   </head>
@@ -821,7 +825,95 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 border">2</div>
+          <div class="col-md-4 border">
+            <div class="Widget text-center">
+              <div class="widget-title">
+                <h6>About Me</h6>
+              </div>
+              <div class="about-me-widget-thumb">
+                <img src="images/9-image.jpeg" class="profile-image" alt="" />
+              </div>
+              <h4 class="font-shadow-into-light">Zahra Olanrewaju</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt
+              </p>
+              <div class="widget-title">
+                <h6>Subscribe & Follow</h6>
+              </div>
+              <div class="subscribe-link">
+                <a href="#"
+                  ><i class="fa fa-facebook" aria-hidden="true"></i
+                ></a>
+                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-google" aria-hidden="true"></i></a>
+                <a href="#"
+                  ><i class="fa fa-linkedin-square" aria-hidden="true"></i
+                ></a>
+                <a href="#"
+                  ><i class="fa fa-instagram" aria-hidden="true"></i
+                ></a>
+                <a href="#"><i class="fa fa-vimeo" aria-hidden="true"></i></a>
+              </div>
+            </div>
+            <!---------popular post--------------->
+            <div class="widget-title text-center">
+              <h6>Populer Post</h6>
+            </div>
+            <div class="row">
+              <div class="col-md-6 mb-2">
+                <img
+                  src="images/16-image.jpeg"
+                  class="card-img-top"
+                  id="card4"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-6 mb-2">
+                <h5 class="card-title">Top 10 juice bar in london</h5>
+                <p class="card-text">
+                  <small class="text-muted">By Zahra Olanrewaju</small>
+                </p>
+              </div>
+              <div class="col-md-6 mb-2">
+                <img
+                  src="images/13-image.jpeg"
+                  class="card-img-top"
+                  id="card4"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-6 mb-2">
+                <h5 class="card-title">Top 5 Sauces for Grills</h5>
+                <p class="card-text">
+                  <small class="text-muted">By Zahra Olanrewaju</small>
+                </p>
+              </div>
+              <div class="col-md-6 mb-2">
+                <img
+                  src="images/10-image.jpeg"
+                  class="card-img-top"
+                  id="card4"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-6 mb-2">
+                <h5 class="card-title">Top 20 exotic fruits</h5>
+                <p class="card-text">
+                  <small class="text-muted">By Zahra Olanrewaju</small>
+                </p>
+              </div>
+              <div class="col">
+                 <img
+                  src="images/7-image.jpeg"
+                  class="card-img-top"
+                  id="card4"
+                  alt="..."
+                />
+              </div>
+            </div>
+
+          </div>
         </div>
       </div>
     </main>
