--- a/Index.html
+++ b/Index.html
@@ -104,13 +104,13 @@
                     aria-labelledby="navbarDropdownMenuLink"
                   >
                     <a class="dropdown-item" href="#">Home</a>
-                    <a class="dropdown-item" href="#">Archive</a>
+                    <a class="dropdown-item" href="Archive.html">Archive</a>
                     <a class="dropdown-item" href="#">Blog</a>
                     <a class="dropdown-item" href="#">Contact</a>
                   </div>
                 </li>
                 <li class="nav-item" id="z-li">
-                  <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link" href="Archive.html">Archive</a>
                 </li>
                 <li class="nav-item" id="z-li">
                   <a class="nav-link" href="#">Categories</a>
@@ -825,7 +825,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 border">
+          <div class="col-md-4">
             <div class="Widget text-center">
               <div class="widget-title">
                 <h6>About Me</h6>
@@ -904,15 +904,42 @@
                 </p>
               </div>
               <div class="col">
-                 <img
-                  src="images/7-image.jpeg"
-                  class="card-img-top"
-                  id="card4"
-                  alt="..."
-                />
+                <div class="card-cookb">
+                  <img
+                    src="images/7-image.jpeg"
+                    class="card-img-top"
+                    id="card5"
+                    alt="..."
+                  />
+                  <div class="catagory-title">
+                    <a href="#">
+                      <h5 id="text-s1">Cooking Book</h5>
+                    </a>
+                  </div>
+                </div>
               </div>
             </div>
-
+            <!-------------------->
+            <div class="newsletter-form">
+              <div class="widget-title text-center">
+                <h6>Newsletter</h6>
+              </div>
+              <p>
+                Subscribe our newsletter gor get notification about new updates,
+                information discount, etc.
+              </p>
+              <form action="#" method="post">
+                <input
+                  type="email"
+                  name="newsletter-email"
+                  id="email"
+                  placeholder="Your email"
+                />
+                <button type="submit">
+                  <i class="fa fa-search" aria-hidden="true" id="arrow"></i>
+                </button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
