--- a/Index.html
+++ b/Index.html
@@ -103,23 +103,23 @@
                     class="dropdown-menu"
                     aria-labelledby="navbarDropdownMenuLink"
                   >
-                    <a class="dropdown-item" href="#">Home</a>
+                    <a class="dropdown-item" href="Index.html">Home</a>
                     <a class="dropdown-item" href="Archive.html">Archive</a>
-                    <a class="dropdown-item" href="#">Blog</a>
-                    <a class="dropdown-item" href="#">Contact</a>
+                    <a class="dropdown-item" href="Blog Recipe.html">Blog</a>
+                    <a class="dropdown-item" href="contact.html">Contact</a>
                   </div>
                 </li>
                 <li class="nav-item" id="z-li">
                   <a class="nav-link" href="Archive.html">Archive</a>
                 </li>
                 <li class="nav-item" id="z-li">
-                  <a class="nav-link" href="#">Categories</a>
+                  <a class="nav-link" href="Blog Recipe.html">Blog</a>
                 </li>
                 <li class="nav-item" id="z-li">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="About.html">About</a>
                 </li>
                 <li class="nav-item" id="z-li">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="contact.html">Contact</a>
                 </li>
               </ul>
             </div>
@@ -945,6 +945,39 @@
       </div>
     </main>
     <!--main-->
+    <!------Footer-->
+    <footer>
+      <div class="subscribe-link ">
+            <div class="row">
+                <div class="col-12">
+                    <div class="footer-social-area d-flex">
+                        <div class="single-icon">
+                            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span id="icon-text">facebook</span></a>
+                        </div>
+                        <div class="single-icon">
+                            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span  id="icon-text">Twitter</span></a>
+                        </div>
+                        <div class="single-icon">
+                            <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i><span  id="icon-text">GOOGLE+</span></a>
+                        </div>
+                        <div class="single-icon">
+                            <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i><span  id="icon-text">linkedin</span></a>
+                        </div>
+                        <div class="single-icon">
+                            <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i><span  id="icon-text">Instagram</span></a>
+                        </div>
+                        <div class="single-icon">
+                            <a href="#"><i class="fa fa-vimeo" aria-hidden="true"></i><span  id="icon-text">VIMEO</span></a>
+                        </div>
+                        <div class="single-icon">
+                            <a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i><span  id="icon-text">YOUTUBE</span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </div>
+    </footer>
+        <!------Footer-->
   </body>
   <script src="src/main1.js"></script>
 </html>
